# TransitArrivalBoard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Config.json  Makefile  README.md  SECURITY.md  build.rs  config.json  config.ts  eslint.config.js  export_readme.md  next.config.js  out  out.json  outjson  package-lock.json  package.json  prettier.config.js  run.bat  run.sh  settings.json  tailwind.config.js  tsconfig.json
.github/workflows/: codeql.yml  rust-clippy.yml
app/: config.ts  layout.tsx  page.tsx  types.d.ts
app/components/: Alert.tsx  Box.tsx  Bullet.tsx  Bulletin.tsx  Calendar.tsx  Countdown.tsx  List.tsx  Message.tsx  News.tsx  StationList.tsx  StationTimeline.tsx  StatusBar.tsx  Title.tsx
backend/: .gitignore  Cargo.toml
backend/src/: bus_stop_handler.rs  config.rs  feed_handler.rs  lib.rs  main.rs  mercury_structs.rs  service_alert_handler.rs  siri_structs.rs  subway_stop_handler.rs
docs/: CODE_OF_CONDUCT.md
frontend/: .gitignore  index.html  package-lock.json  package.json  prettier.config.ts  tsconfig.json
frontend/src/: App.tsx  Fallback.tsx  config.ts  index.css  main.tsx  types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AlertList.tsx  Bullet.tsx  Bulletin.tsx  Countdown.tsx  (+5 more)
gtfsproto/: gtfs-realtime.proto
scripts/: Makefile  run.bat
src/: bus_stop_handler.rs  config.rs  delay.rs  feed_data.rs  feed_handler.rs  lib.rs  lines.rs  main.rs  mercury.rs  service_alert_handler.rs  siri_structs.rs  subway_stop_handler.rs
types/: Config.ts  Export.ts  Stop.ts  Vehicle.ts
ui/: TransitUi.slint
(+11 files in other folders)
