[package]
name = "transit-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.11.0"
minreq ={ version="2.14.1", features=["https"] }
dotenvy = "0.15.7"
prost = "0.12.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
tungstenite = "0.21.0"
crossbeam-channel = "0.5.15"
gtfs-structures = { version="0.43.0", default-features=false, features=[] }
chrono = { version="0.4.42", features = ["alloc"]}
ts-rs = { version="8.1", features=["serde-compat"]}
rgb = { version="0.8.52", features = ["serde"]}

[build-dependencies]
prost-build = { version = "0.12.6" }

[lints.rust]
unsafe_code = "forbid"
